--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,11 @@ body {
 	background-color: #202245;
 }
 
+.container {
+	max-width: 1920px;
+	margin: 0 auto;
+}
+
 .header {
 	margin: 50px 165px 0 303px;
 	display: flex;
