--- a/css/style.css
+++ b/css/style.css
@@ -272,25 +272,85 @@ body {
 	top: 104px;
 	left: 0;
 }
-/*Overview
+/*What is
 ============================================*/
-.t_overview {
-	font-family: Nunito;
-	font-style: normal;
-	font-weight: bold;
-	font-size: 36px;
-	line-height: 36px;
-	text-align: center;
-	color: #fff;
-}
-/*Overview > Video*/
-.video {
-	width: 1165px;
-	height: 719px;
+.what_is {
+	width: 1238px;
 	margin: 0 auto;
 }
 
-.video img {
-	width: 100%;
-	height: 100%;
+.what_is_text {
+	text-align: center;
+}
+
+.what_is_cards {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(2, 1fr);
+	grid-column-gap: 22px;
+	grid-row-gap: 22px;
+}
+
+.what_is_card_all {
+	position: relative;
+	background-color: #3C4070;
+	box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.14);
+	border-radius: 7px;
+}
+
+.what_is_card_number {
+	position: absolute;
+	top: -20px;
+	right: 177px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	width: 44px;
+	height: 44px;
+	border-radius: 50%;
+	background-color: #202245;
+}
+
+.what_is_card_1 {
+	width: 398px;
+	height: 219px;
+}
+
+.what_is_card_2 {
+	width: 398px;
+	height: 219px;
+}
+
+.what_is_card_3 {
+	width: 398px;
+	height: 330px;
+}
+
+.what_is_card_4 {
+	width: 398px;
+	height: 330px;
+}
+
+.what_is_card_5 {
+	width: 398px;
+	height: 330px;
+}
+
+.what_is_card_6 {
+	width: 398px;
+	height: 219px;
+}
+
+.what_is_card_1 .what_is_card_img {
+	position: absolute;
+	top: 15px;
+	right: -20px;
+}
+
+.what_is_card_2 .what_is_card_img {
+	position: absolute;
+	top: 47px;
+	right: -20px;
 }
