--- a/css/style.css
+++ b/css/style.css
@@ -281,9 +281,17 @@ body {
 
 .what_is_text {
 	text-align: center;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 36px;
+	line-height: 36px;
+	color: #fff;
 }
 
 .what_is_cards {
+	margin-top: 118px;
+	
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
@@ -311,46 +319,125 @@ body {
 	height: 44px;
 	border-radius: 50%;
 	background-color: #202245;
+
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 25px;
+	line-height: 68px;
+	color: #808795;
+}
+
+.title_what_is_card {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 24px;
+	line-height: 171.7%;
+	color: #fff;
+}
+
+.subtitle_what_is_card {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 26px;
+	color: #D8D9E2FF;
 }
 
 .what_is_card_1 {
 	width: 398px;
 	height: 219px;
+	grid-area: 1 / 1 / 4 / 2;
 }
 
 .what_is_card_2 {
 	width: 398px;
 	height: 219px;
+	grid-area: 1 / 2 / 4 / 3;
 }
 
 .what_is_card_3 {
 	width: 398px;
 	height: 330px;
+	grid-area: 1 / 3 / 5 / 4;
 }
 
 .what_is_card_4 {
 	width: 398px;
 	height: 330px;
+	grid-area: 4 / 1 / 7 / 2;
 }
 
 .what_is_card_5 {
 	width: 398px;
 	height: 330px;
+	grid-area: 4 / 2 / 7 / 3;
 }
 
 .what_is_card_6 {
 	width: 398px;
 	height: 219px;
+	grid-area: 5 / 3 / 7 / 4;
+}
+
+.what_is_card_1 .text_what_is_card {
+	margin: 45px 173px 57px 41px;
+}
+
+.what_is_card_2 .text_what_is_card {
+	margin: 48px 125px 52px 41px;
+}
+
+.what_is_card_3 .text_what_is_card {
+	margin: 48px 69px 79px 41px;
+}
+
+.what_is_card_4 .text_what_is_card {
+	margin: 54px 26px 242px 45px;
+}
+
+.what_is_card_5 .text_what_is_card {
+	margin: 56px 28px 139px 51px;
+}
+
+.what_is_card_6 .text_what_is_card {
+	margin: 40px 11px 56px 40px;
+}
+
+.what_is_card_img_all {
+	position: absolute;
 }
 
 .what_is_card_1 .what_is_card_img {
-	position: absolute;
-	top: 15px;
+	top: 10px;
 	right: -20px;
 }
 
 .what_is_card_2 .what_is_card_img {
-	position: absolute;
 	top: 47px;
 	right: -20px;
+}
+
+.what_is_card_3 .what_is_card_img {
+	bottom: -30px;
+	right: -35px;
+}
+
+.what_is_card_4 .what_is_card_img {
+	bottom: -25px;
+	right: -50px;
+}
+
+.what_is_card_5 .what_is_card_img {
+	bottom: -120px;
+	right: 	-30px;
+}
+
+.what_is_card_6 .what_is_card_img {
+	top: 122px;
+	right: -37px;
+	left: 200px;
 }
