--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ input {
 /*Header
 ============================================*/
 body {
-	background-color: #202245;
+	background-color: rgb(32, 34, 69);
+	overflow-x: hidden;
 
 }
 
@@ -50,10 +51,11 @@ body {
 	align-items: center;
 	justify-content: space-between;
 	flex-wrap: wrap;
+	z-index: -2;
 }
 
-.list {
-	
+.logo {
+	z-index: -2;
 }
 
 .list ul {
@@ -84,6 +86,7 @@ body {
 .logs {
 	display: flex;
 	align-items: center;
+	z-index: -2;
 
 	transition: 0.3s;
 }
@@ -113,8 +116,8 @@ body {
 	margin-right: 34px;
 }
 /*Header > Burger menu*/
-.burger {
-	display: none;
+.burger_menu {
+	display: block;
 	cursor: pointer;
 	width: 28px;
 	height: 24px;
@@ -126,12 +129,44 @@ body {
 	margin-top: 6px;
 	background-color: #fff;
 }
+
+.burger_list {
+	position: absolute;
+	top: 0;
+	right: 0;
+
+	padding: 100px 70px 100px 70px;
+	z-index: -1;
+	background-color: #FF2E63;
+
+	transform: translateX(400px);
+	transition: 0.7s ease-out;
+}
+
+.burger_list ul {
+	display: flex;
+	flex-direction: column;
+}
+
+.burger_list a {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 50px;
+	color: #fff;
+}
+
+.burger_list_toggle {
+	transform: translateX(0px);
+	transition: 0.7s ease-out;
+}
 /*Intro
 ============================================*/
 .intro {
 	position: relative;
-	margin-top: 123px;
-	margin-left: 303px;
+	margin: 123px 0 0 303px;
+	z-index: -2;
 }
 
 .r_img {
@@ -291,7 +326,7 @@ body {
 
 .what_is_cards {
 	margin-top: 118px;
-	
+
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-template-rows: repeat(2, 1fr);
@@ -334,11 +369,13 @@ body {
 	font-style: normal;
 	font-weight: bold;
 	font-size: 24px;
-	line-height: 171.7%;
+	line-height: 30px;
 	color: #fff;
 }
 
 .subtitle_what_is_card {
+	margin-top: 6px;
+
 	font-family: Nunito;
 	font-style: normal;
 	font-weight: normal;
@@ -388,7 +425,7 @@ body {
 }
 
 .what_is_card_2 .text_what_is_card {
-	margin: 48px 125px 52px 41px;
+	margin: 48px 105px 52px 41px;
 }
 
 .what_is_card_3 .text_what_is_card {
@@ -396,7 +433,7 @@ body {
 }
 
 .what_is_card_4 .text_what_is_card {
-	margin: 54px 26px 242px 45px;
+	margin: 54px 25px 242px 45px;
 }
 
 .what_is_card_5 .text_what_is_card {
@@ -404,7 +441,7 @@ body {
 }
 
 .what_is_card_6 .text_what_is_card {
-	margin: 40px 11px 56px 40px;
+	margin: 40px 30px 56px 40px;
 }
 
 .what_is_card_img_all {
@@ -440,4 +477,373 @@ body {
 	top: 122px;
 	right: -37px;
 	left: 200px;
+}
+/*Tariffs
+============================================*/
+.tariffs {
+	max-width: 1328px;
+	margin: 0 auto;
+	margin-top: 140px;
+}
+
+.tariffs_cards {
+	display: flex;
+	justify-content: space-around;
+	flex-wrap: wrap;
+}
+
+.text_tariffs {
+	text-align: center;
+	margin-bottom: 205px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 36px;
+	color: #fff;
+}
+
+.title_tariffs_card {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: 900;
+	font-size: 30px;
+	line-height: 36px;
+	text-align: center;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
+	color: #FF2E63;
+}
+
+.price_tariffs_card {
+	margin-top: 25px;
+}
+
+.price_tariffs_card span {
+	display: block;
+}
+
+.price_tariffs_card span:first-child {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 36px;
+	letter-spacing: 0.04em;
+	text-transform: uppercase;
+	color: #fff;
+}
+
+.price_tariffs_card span:last-child {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 22px;
+	line-height: 36px;
+	text-transform: lowercase;
+	color: #D8D9E2FF;
+}
+
+.tariffs_card_img {
+	position: absolute;
+}
+
+.tariffs_card_all {
+	position: relative;
+	width: 424px;
+	height: 568px;
+	padding: 85px 67px 67px 67px;
+	text-align: center;
+
+	background: #3C4070;
+	box-shadow: 0px 4px 52px rgba(0, 0, 0, 0.25);
+	border-radius: 7px;
+}
+
+.tariffs_card_1 .tariffs_card_img {
+	top: -73px;
+	right: 50%;
+	transform: translateX(50%);
+}
+
+.tariffs_card_2 .tariffs_card_img {
+	top: -120px;
+	right: 50%;
+	transform: translateX(50%);
+}
+
+.tariffs_card_3 .tariffs_card_img {
+	top: -150px;
+	right: 50%;
+	transform: translateX(50%);
+}
+
+.tariffs_card_1 {
+
+}
+
+.tariffs_included_card {
+	width: 148px;
+	margin: 0 auto;
+	margin-top: 41px;
+}
+
+.item_included {
+	margin-bottom: 20px;
+	text-align: left;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	text-transform: lowercase;
+	color: #fff;
+}
+
+.item_included:last-child {
+	margin-bottom: 0;
+}
+
+.item_included:before {
+	content: '';
+	display: inline-block;
+	margin-right: 11px;
+	width: 12px;
+	height: 9px;
+	background-image: url(../img/tariffs/check.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+}
+
+.btn_tariffs_card {
+	cursor: pointer;
+
+	width: 290px;
+	margin-top: 42px;
+	padding: 19px 83px;
+	border: none;
+	background: linear-gradient(38.47deg, #D70652 31.15%, #FF025E 82.75%);
+	border-radius: 7px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 20px;
+	color: #fff;
+}
+/*Scripts
+============================================*/
+.scripts {
+	max-width: 1200px;
+	margin: 0 auto;
+	margin-top: 140px;
+}
+
+.scripts_text {
+	text-align: center;
+	margin-bottom: 60px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 36px;
+	color: #fff;
+}
+
+.scripts_content {
+	display: flex;
+	align-items: center;
+}
+
+.scripts_content_1 .scripts_bloggers_img {
+	margin-right: 151px;
+}
+
+.scripts_content_2 .scripts_bloggers_img {
+	margin-right: 78px;
+	margin-left: -151px;
+}
+
+.scripts_content_3 .scripts_bloggers_img {
+	margin-right: 0;
+	margin-left: -71px;
+}
+
+.scripts_content_span {
+	margin-bottom: 46px;
+
+	display: flex;
+	align-items: center;
+}
+
+.scripts_number {
+	position: relative;
+	left: -37px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: 900;
+	font-size: 48px;
+	color: #fff;
+}
+
+.scripts_title {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 28px;
+	color: #fff;
+}
+
+.subtitle_item {
+	position: relative;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 18px;
+	line-height: 29px;
+	color: #fff;
+}
+
+.subtitle_item {
+	margin-bottom: 31px;
+}
+
+.subtitle_item:last-child {
+	margin-bottom: 0;
+}
+
+.subtitle_item:before {
+	content: '';
+	position: absolute;
+	top: 7px;
+	left: -37px;
+
+	display: inline-block;
+	background-color: #FF2E63;
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+}
+/*Questions
+============================================*/
+.questions {
+	position: relative;
+	max-width: 925px;
+	margin: 0 auto;
+	margin-top: 151px;
+	z-index: 1;
+}
+
+.questions_text {
+	text-align: center;
+	margin-bottom: 83px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 36px;
+	color: #fff;
+}
+
+.questions_img {
+	position: absolute;
+    top: 58px;
+    left: -150px;
+    z-index: -1;
+}
+
+.questions_accordion {
+	max-width: 923px;
+	height: auto;
+
+	margin-bottom: 43px;
+
+	background-color: #3C4070;
+	border-radius: 7px;
+}
+
+.questions_active {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	padding: 36px 34px 25px 36px;
+	cursor: pointer;
+}
+
+.questions_active_container {
+	display: flex;
+	align-items: center;
+}
+
+.questions_number {
+	margin-right: 26px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 53px;
+	color: #C4C6D4FF;
+}
+
+.questions_title {
+	max-width: 640px;
+
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 22px;
+	line-height: 171.7%;
+	color: #fff;
+}
+
+.questions_open {
+	position: relative;
+
+	width: 32px;
+	height: 32px;
+	background-color: #202245;
+	border-radius: 50%;
+}
+
+.questions_open div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.questions_open div:first-child {
+	width: 13px;
+	border: 1px solid #FFFFFF;
+}
+
+.questions_open div:last-child {
+	left: 9px;
+	top: 15px;
+	width: 13px;
+	border: 1px solid #FFFFFF;
+	transform: rotate(-90deg);
+}
+
+.questions_content {
+	display: none;
+
+	padding: 32px 15px 37px 36px;
+	border-top: 1px solid rgba(255, 255, 255, 0.36);
+}
+
+.questions_content_active {
+	display: block;
+}
+
+.questions_content_subtitle {
+	font-family: Nunito;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 22px;
+	line-height: 35px;
+	color: #C4C6D4FF;
 }
