--- a/css/media.css
+++ b/css/media.css
@@ -14,6 +14,12 @@
 	.intro {
 	    margin: 123px 0 0 70px;
 	}
+	.btn_link {
+		z-index: 3;
+	}
+	.r_img {
+		z-index: -2;
+	}
 	.list {
 		display: none;
 	}
@@ -127,6 +133,12 @@
 	}
 }
 
+@media screen and (max-width: 800px) {
+	.tariffs_card_all:not(:first-child) {
+		margin-top: 150px;
+	}
+}
+
 @media screen and (max-width: 768px) {
 	.r_img {
 		display: none;
@@ -148,8 +160,13 @@
 	.text_tariffs {
 		margin-bottom: 100px;
 	}
-	.tariffs_cards .tariffs_card_all:not(:first-child) {
-		margin-top: 150px;
+	.tariffs_cards {
+		flex-direction: column;
+		align-items: center;
+		margin: 0 20px;
+	}
+	.tariffs_card_all {
+	    padding: 85px 67px 67px 67px;
 	}
 	.scripts_text {
 		margin-bottom: 0;
@@ -191,6 +208,71 @@
 	.scripts_info {
 		margin-left: 90px;
 		margin-right: 30px;
+	}
+	.questions_title {
+		max-width: 280px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.for_whom img, .what_is img, .tariffs img {
+		display: none;
+	}
+	.for_whom {
+	    margin: 150px 20px 60px 20px;
+	}
+	.for_whom .cards .card {
+		height: auto;
+	    padding: 35px 35px 20px 35px;
+	}
+	.what_is_card_all {
+		height: auto;
+		max-width: 300px;
+		margin: 0 20px;
+	}
+	.what_is_card_number {
+		right: 50%;
+		transform: translateX(50%);
+	}
+	.what_is_card_all .text_what_is_card {
+	    margin: 30px 20px 30px 20px;
+	}
+	.text_tariffs {
+		margin-bottom: 60px;
+	}
+	.tariffs_card_all {
+	    padding: 35px 20px 20px 20px;
+	    height: auto;
+	}
+	.tariffs_card_all:not(:first-child) {
+		margin-top: 60px;
+	}
+	.questions {
+		margin-top: 60px;
+		margin-right: 20px;
+		margin-left: 20px;
+	}
+	.questions_text {
+		margin-bottom: 60px;
+		font-size: 24px;
+	}
+	.questions_active {
+		padding: 15px 10px 15px 10px;
+	}
+	.questions_number {
+		margin-right: 15px;
+		font-size: 30px;
+	}
+	.questions_title {
+		font-size: 16px;
+		max-width: 200px;
+	}
+	.questions_content {
+	    padding: 20px 10px 20px 20px;
+	}
+	.questions_content_subtitle {
+		font-size: 16px;
+		line-height: 28px;
 	}
 }
 
@@ -275,23 +357,16 @@
 	}
 	.text_tariffs {
 		font-size: 24px;
-		margin-bottom: 60px;
 	}
 	.tariffs_cards {
-		margin-right: 0;
+		margin: 0;
 	}
 	.tariffs_card_all {
-    	height: auto;
-    	padding: 35px 0 0 0;
-	}
-	.tariffs_card_all img {
-		display: none;
-	}
-	.tariffs_cards .tariffs_card_all:not(:first-child) {
-		margin-top: 60px;
+		padding: 20px 0 0 0;
 	}
 	.btn_tariffs_card {
-		font-size: 18px;
+		width: 270px;
+		margin: 42px 10px 10px 10px;
 	}
 	.scripts {
 		margin-top: 60px;
@@ -312,34 +387,10 @@
 	.scripts_info .subtitle_item {
 		font-size: 16px
 	}
-	.questions {
-		margin-top: 60px;
-		margin-right: 20px;
-		margin-left: 20px;
-	}
-	.questions_text {
-		margin-bottom: 60px;
-		font-size: 24px;
-	}
-	.questions_active {
-		padding: 15px 10px 15px 10px;
-	}
-	.questions_number {
-		margin-right: 15px;
-		font-size: 30px;
-	}
-	.questions_title {
-		font-size: 16px;
-		max-width: 150px;
-	}
-	.questions_content {
-	    padding: 20px 10px 20px 20px;
-	}
-	.questions_content_subtitle {
-		font-size: 16px;
-		line-height: 28px;
-	}
 	.burger_list {
 		width: 100%;
+	}
+	.questions_title {
+		max-width: 140px;
 	}
 }
