--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1682px) {
+@media screen and (max-width: 1680px) {
 	.header {
 		margin: 50px 100px 0 100px;
 	}
@@ -7,7 +7,7 @@
 	}
 }
 
-@media screen and (max-width: 1368px) {
+@media screen and (max-width: 1366px) {
 	.header {
 		margin: 50px 30px 0 70px;
 	}
@@ -32,7 +32,7 @@
 	}
 }
 
-@media screen and (max-width: 1282px) {
+@media screen and (max-width: 1280px) {
 	.intro {
 		margin: 100px 0 0 70px;
 	}
@@ -115,7 +115,7 @@
 	}
 }
 
-@media screen and (max-width: 1026px) {
+@media screen and (max-width: 1024px) {
 	.logs {
 		display: none;
 	}
@@ -133,13 +133,13 @@
 	}
 }
 
-@media screen and (max-width: 802px) {
+@media screen and (max-width: 800px) {
 	.tariffs_card_all:not(:first-child) {
 		margin-top: 150px;
 	}
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 768px) {
 	.r_img {
 		display: none;
 	}
@@ -166,7 +166,11 @@
 		margin: 0 20px;
 	}
 	.tariffs_card_all {
-	    padding: 85px 67px 67px 67px;
+	    padding: 35px 20px 20px 20px;
+	    height: auto;
+	}
+	.tariffs img {
+		display: none;
 	}
 	.scripts_text {
 		margin-bottom: 0;
@@ -192,7 +196,7 @@
 	}
 }
 
-@media screen and (max-width: 582px) {
+@media screen and (max-width: 580px) {
 	.intro {
 		margin: 70px 30px 0 40px;
 	}
@@ -205,29 +209,25 @@
 	.header {
 		margin: 30px 30px 0 40px;
 	}
-	.scripts_info {
-		margin-left: 90px;
-		margin-right: 30px;
-	}
-	.questions_title {
-		max-width: 280px;
-	}
-}
-
-@media screen and (max-width: 402px) {
-	.for_whom img, .what_is img, .tariffs img {
+	.for_whom img, .what_is img {
 		display: none;
 	}
 	.for_whom {
 	    margin: 150px 20px 60px 20px;
 	}
 	.for_whom .cards .card {
+		max-width: 390px;
+		margin: 0 20px;
 		height: auto;
 	    padding: 35px 35px 20px 35px;
 	}
+	.scripts_info {
+		margin-left: 90px;
+		margin-right: 30px;
+	}
 	.what_is_card_all {
 		height: auto;
-		max-width: 300px;
+		max-width: 340px;
 		margin: 0 20px;
 	}
 	.what_is_card_number {
@@ -237,12 +237,19 @@
 	.what_is_card_all .text_what_is_card {
 	    margin: 30px 20px 30px 20px;
 	}
+	.questions_number {
+		margin-right: 15px;
+		font-size: 30px;
+	}
+	.questions_title {
+		font-size: 16px;
+		max-width: 180px;
+	}
+}
+
+@media screen and (max-width: 400px) {
 	.text_tariffs {
 		margin-bottom: 60px;
-	}
-	.tariffs_card_all {
-	    padding: 35px 20px 20px 20px;
-	    height: auto;
 	}
 	.tariffs_card_all:not(:first-child) {
 		margin-top: 60px;
@@ -259,14 +266,6 @@
 	.questions_active {
 		padding: 15px 10px 15px 10px;
 	}
-	.questions_number {
-		margin-right: 15px;
-		font-size: 30px;
-	}
-	.questions_title {
-		font-size: 16px;
-		max-width: 200px;
-	}
 	.questions_content {
 	    padding: 20px 10px 20px 20px;
 	}
@@ -276,7 +275,7 @@
 	}
 }
 
-@media screen and (max-width: 322px) {
+@media screen and (max-width: 320px) {
 	.header {
 		margin: 20px 20px 0 20px;
 	}
