--- a/css/media.css
+++ b/css/media.css
@@ -116,6 +116,9 @@
 }
 
 @media screen and (max-width: 1024px) {
+	.for_whom {
+    	margin: 165px 60px 197px 60px;
+	}
 	.logs {
 		display: none;
 	}
@@ -131,23 +134,30 @@
 	.logs_burger {
 		display: block;
 	}
-}
-
-@media screen and (max-width: 800px) {
-	.tariffs_card_all:not(:first-child) {
-		margin-top: 150px;
+	.what_is_cards {
+		margin-top: 80px;
+	}
+	.text_tariffs {
+		margin-bottom: 150px;
 	}
 }
 
 @media screen and (max-width: 768px) {
-	.r_img {
-		display: none;
+	.tariffs_card_all:not(:first-child) {
+		margin-top: 85px;
 	}
-	.for_whom {
-		margin: 150px 60px 197px 60px;
+	.text_intro h1 {
+		line-height: 50px;
 	}
 	.for_whom .cards .card:not(:first-child) {
 		margin-top: 60px;
+	}
+	.r_img {
+		right: -400px;
+		opacity: 0.5;
+	}
+	.for_whom {
+		margin: 150px 60px 197px 60px;
 	}
 	.what_is_cards {
 		display: flex;
@@ -158,7 +168,7 @@
 		margin-top: 30px;
 	}
 	.text_tariffs {
-		margin-bottom: 100px;
+		margin-bottom: 70px;
 	}
 	.tariffs_cards {
 		flex-direction: column;
@@ -197,6 +207,12 @@
 }
 
 @media screen and (max-width: 580px) {
+	.burger_list {
+		width: 100%;
+	}
+	.r_img {
+		display: none;
+	}
 	.intro {
 		margin: 70px 30px 0 40px;
 	}
@@ -222,7 +238,7 @@
 	    padding: 35px 35px 20px 35px;
 	}
 	.scripts_info {
-		margin-left: 90px;
+		margin-left: 60px;
 		margin-right: 30px;
 	}
 	.what_is_card_all {
@@ -243,11 +259,14 @@
 	}
 	.questions_title {
 		font-size: 16px;
-		max-width: 180px;
+		max-width: 330px;
 	}
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 411px) {
+	.questions_title {
+		max-width: 235px;
+	}
 	.text_tariffs {
 		margin-bottom: 60px;
 	}
